test/sematest/invalid/sysout.java
class Foo {
  public static void main(String[] args) {
    System.out.println();
    System.out.println(bool);
    System.out.println(new Foo());
  }
}
